add battery stats to conf

--- a/boards/shields/nice_custom/nice_custom.conf
+++ b/boards/shields/nice_custom/nice_custom.conf
@@ -4,5 +4,5 @@ CONFIG_ZMK_DISPLAY=y
 # Disable idle blanking
 CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
 
-# Optional: Enable WPM tracking (if using WPM widget)
-# CONFIG_ZMK_WPM=y
+# Battery configuration
+CONFIG_ZMK_BATTERY_REPORTING=y
