--- a/boards/shields/nice_custom/nice_custom.conf
+++ b/boards/shields/nice_custom/nice_custom.conf
@@ -7,5 +7,5 @@ CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
 # Battery configuration
 CONFIG_ZMK_BATTERY_REPORTING=y
 CONFIG_ZMK_WPM=y
-ONFIG_BT=y
+CONFIG_BT=y
 CONFIG_ZMK_BLE=y
