feat add event transfer from left to right side via relays

--- a/boards/shields/nice_custom/CMakeLists.txt
+++ b/boards/shields/nice_custom/CMakeLists.txt
@@ -10,6 +10,7 @@ file(GLOB SCREEN_SOURCES "${DISPLAY_DIR}/screens/*.c")
 file(GLOB WIDGET_SOURCES "${DISPLAY_DIR}/widgets/*.c")
 file(GLOB EVENT_SOURCES "${DISPLAY_DIR}/events/*.c")
 file(GLOB ASSET_SOURCES "${DISPLAY_DIR}/assets/*.c")
+file(GLOB RELAY_SOURCES "${DISPLAY_DIR}/relay/*.c")
 
 # Add util.c
 set(UTIL_SOURCE "${DISPLAY_DIR}/util.c")
@@ -25,6 +26,7 @@ target_sources(app PRIVATE
     ${WIDGET_SOURCES}
     ${EVENT_SOURCES}
     ${ASSET_SOURCES}
+    ${RELAY_SOURCES}
 )
 
 # Include paths for headers
@@ -35,4 +37,5 @@ target_include_directories(app PRIVATE
     ${DISPLAY_DIR}/events
     ${DISPLAY_DIR}/screens
     ${DISPLAY_DIR}/assets
+    ${DISPLAY_DIR}/relay
 )
