--- a/boards/shields/nice_custom/nice_custom.conf
+++ b/boards/shields/nice_custom/nice_custom.conf
@@ -1,7 +1,8 @@
+# Set bluetooth device name
+CONFIG_ZMK_KEYBOARD_NAME="CKBD"
+
 # Enable nice!custom display
 CONFIG_ZMK_DISPLAY=y
-
-# Disable idle blanking
 CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
 
 # Battery configuration
