--- a/boards/shields/nice_custom/nice_custom.conf
+++ b/boards/shields/nice_custom/nice_custom.conf
@@ -5,8 +5,9 @@ CONFIG_ZMK_KEYBOARD_NAME="CKBD"
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
 
-# Battery configuration
+# Battery reporting
 CONFIG_ZMK_BATTERY_REPORTING=y
-CONFIG_ZMK_WPM=y
+
+# Bluetooth
 CONFIG_BT=y
 CONFIG_ZMK_BLE=y
