--- a/boards/shields/nice_custom/nice_custom.conf
+++ b/boards/shields/nice_custom/nice_custom.conf
@@ -1,10 +1,13 @@
-# Enable nice!custom display
+# Copyright (c) 2024 The ZMK Contributors
+# SPDX-License-Identifier: MIT
+
+# Display
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
 
-# Battery reporting
+# Battery
 CONFIG_ZMK_BATTERY_REPORTING=y
 
-# Bluetooth
-CONFIG_BT=y
-CONFIG_ZMK_BLE=y
+# DON'T set BT/BLE here
+# CONFIG_BT=y              ← REMOVE
+# CONFIG_ZMK_BLE=y         ← REMOVE
